parser.output
Terminals unused in grammar

   REALCONST


State 96 conflicts: 1 shift/reduce


Grammar

    0 $accept: program $end

    1 program: stmts stmt
    2        | %empty

    3 stmts: stmts stmt
    4      | %empty

    5 stmt: expr SEMICOLON
    6     | ifstmt
    7     | whilestmt
    8     | forstmt
    9     | returnstmt
   10     | BREAK SEMICOLON
   11     | CONTINUE SEMICOLON
   12     | block
   13     | funcdef
   14     | SEMICOLON

   15 expr: assignexpr
   16     | expr PLUS expr
   17     | expr MINUS expr
   18     | expr MULTIPLIES expr
   19     | expr DIVIDES expr
   20     | expr MODULUS expr
   21     | expr GREATER expr
   22     | expr GREATER_EQUAL expr
   23     | expr LESS expr
   24     | expr LESS_EQUAL expr
   25     | expr EQUAL expr
   26     | expr INEQUAL expr
   27     | expr AND expr
   28     | expr OR expr
   29     | term

   30 term: LEFT_PARENTHESIS expr RIGHT_PARENTHESIS
   31     | MINUS expr
   32     | NOT expr
   33     | INCREMENT lvalue
   34     | lvalue INCREMENT
   35     | DECREMENT lvalue
   36     | lvalue DECREMENT
   37     | primary

   38 assignexpr: lvalue ASSIGN expr

   39 primary: lvalue
   40        | call
   41        | objectdef
   42        | LEFT_PARENTHESIS funcdef RIGHT_PARENTHESIS
   43        | const

   44 lvalue: ID
   45       | LOCAL ID
   46       | DOUBLE_COLON ID
   47       | member

   48 member: lvalue DOT ID
   49       | lvalue LEFT_BRACKETS expr RIGHT_BRACKETS
   50       | call DOT ID
   51       | call LEFT_BRACKETS expr RIGHT_BRACKETS

   52 call: call LEFT_PARENTHESIS elist RIGHT_PARENTHESIS
   53     | lvalue callsuffix
   54     | LEFT_PARENTHESIS funcdef RIGHT_PARENTHESIS LEFT_PARENTHESIS elist RIGHT_PARENTHESIS

   55 callsuffix: normcall
   56           | methodcall

   57 normcall: LEFT_PARENTHESIS elist RIGHT_PARENTHESIS

   58 methodcall: DOUBLE_DOT ID LEFT_PARENTHESIS elist RIGHT_PARENTHESIS

   59 elist: expr elists
   60      | %empty

   61 elists: COMMA expr elists
   62       | %empty

   63 objectdef: LEFT_BRACKETS elist RIGHT_BRACKETS
   64          | LEFT_BRACKETS indexed RIGHT_BRACKETS

   65 indexed: indexedelem indexeds

   66 indexeds: COMMA indexed
   67         | %empty

   68 indexedelem: LEFT_BRACES expr COLON expr RIGHT_BRACES

   69 $@1: %empty

   70 block: LEFT_BRACES $@1 stmts RIGHT_BRACES

   71 $@2: %empty

   72 $@3: %empty

   73 funcdef: FUNCTION ID $@2 LEFT_PARENTHESIS $@3 idlist RIGHT_PARENTHESIS funcblock

   74 $@4: %empty

   75 $@5: %empty

   76 funcdef: FUNCTION $@4 LEFT_PARENTHESIS $@5 idlist RIGHT_PARENTHESIS funcblock

   77 $@6: %empty

   78 funcblock: LEFT_BRACES $@6 stmts RIGHT_BRACES

   79 const: INTCONST
   80      | STRING
   81      | NIL
   82      | TRUE
   83      | FALSE

   84 $@7: %empty

   85 idlist: ID $@7 ids
   86       | %empty

   87 $@8: %empty

   88 ids: COMMA ID $@8 ids
   89    | %empty

   90 ifstmt: ifprefix stmt
   91       | ifprefix stmt ELSE stmt

   92 ifprefix: IF LEFT_PARENTHESIS expr RIGHT_PARENTHESIS

   93 whilestmt: WHILE LEFT_PARENTHESIS expr RIGHT_PARENTHESIS stmt

   94 forstmt: FOR LEFT_PARENTHESIS elist SEMICOLON expr SEMICOLON elist RIGHT_PARENTHESIS stmt

   95 returnstmt: RETURN expr SEMICOLON
   96           | RETURN SEMICOLON


Terminals, with rules where they appear

$end (0) 0
error (256)
ID (258) 44 45 46 48 50 58 73 85 88
INTCONST (259) 79
REALCONST (260)
STRING (261) 80
IF (262) 92
ELSE (263) 91
WHILE (264) 93
FOR (265) 94
FUNCTION (266) 73 76
RETURN (267) 95 96
BREAK (268) 10
CONTINUE (269) 11
AND (270) 27
NOT (271) 32
OR (272) 28
LOCAL (273) 45
TRUE (274) 82
FALSE (275) 83
NIL (276) 81
ASSIGN (277) 38
PLUS (278) 16
MINUS (279) 17 31
MULTIPLIES (280) 18
DIVIDES (281) 19
MODULUS (282) 20
EQUAL (283) 25
INEQUAL (284) 26
INCREMENT (285) 33 34
DECREMENT (286) 35 36
GREATER (287) 21
LESS (288) 23
GREATER_EQUAL (289) 22
LESS_EQUAL (290) 24
LEFT_BRACES (291) 68 70 78
RIGHT_BRACES (292) 68 70 78
LEFT_BRACKETS (293) 49 51 63 64
RIGHT_BRACKETS (294) 49 51 63 64
LEFT_PARENTHESIS (295) 30 42 52 54 57 58 73 76 92 93 94
RIGHT_PARENTHESIS (296) 30 42 52 54 57 58 73 76 92 93 94
SEMICOLON (297) 5 10 11 14 94 95 96
COMMA (298) 61 66 88
COLON (299) 68
DOUBLE_COLON (300) 46
DOT (301) 48 50
DOUBLE_DOT (302) 58


Nonterminals, with rules where they appear

$accept (48)
    on left: 0
program (49)
    on left: 1 2, on right: 0
stmts (50)
    on left: 3 4, on right: 1 3 70 78
stmt (51)
    on left: 5 6 7 8 9 10 11 12 13 14, on right: 1 3 90 91 93 94
expr (52)
    on left: 15 16 17 18 19 20 21 22 23 24 25 26 27 28 29, on right:
    5 16 17 18 19 20 21 22 23 24 25 26 27 28 30 31 32 38 49 51 59 61
    68 92 93 94 95
term (53)
    on left: 30 31 32 33 34 35 36 37, on right: 29
assignexpr (54)
    on left: 38, on right: 15
primary (55)
    on left: 39 40 41 42 43, on right: 37
lvalue (56)
    on left: 44 45 46 47, on right: 33 34 35 36 38 39 48 49 53
member (57)
    on left: 48 49 50 51, on right: 47
call (58)
    on left: 52 53 54, on right: 40 50 51 52
callsuffix (59)
    on left: 55 56, on right: 53
normcall (60)
    on left: 57, on right: 55
methodcall (61)
    on left: 58, on right: 56
elist (62)
    on left: 59 60, on right: 52 54 57 58 63 94
elists (63)
    on left: 61 62, on right: 59 61
objectdef (64)
    on left: 63 64, on right: 41
indexed (65)
    on left: 65, on right: 64 66
indexeds (66)
    on left: 66 67, on right: 65
indexedelem (67)
    on left: 68, on right: 65
block (68)
    on left: 70, on right: 12
$@1 (69)
    on left: 69, on right: 70
funcdef (70)
    on left: 73 76, on right: 13 42 54
$@2 (71)
    on left: 71, on right: 73
$@3 (72)
    on left: 72, on right: 73
$@4 (73)
    on left: 74, on right: 76
$@5 (74)
    on left: 75, on right: 76
funcblock (75)
    on left: 78, on right: 73 76
$@6 (76)
    on left: 77, on right: 78
const (77)
    on left: 79 80 81 82 83, on right: 43
idlist (78)
    on left: 85 86, on right: 73 76
$@7 (79)
    on left: 84, on right: 85
ids (80)
    on left: 88 89, on right: 85 88
$@8 (81)
    on left: 87, on right: 88
ifstmt (82)
    on left: 90 91, on right: 6
ifprefix (83)
    on left: 92, on right: 90 91
whilestmt (84)
    on left: 93, on right: 7
forstmt (85)
    on left: 94, on right: 8
returnstmt (86)
    on left: 95 96, on right: 9


State 0

    0 $accept: . program $end

    $end      reduce using rule 2 (program)
    $default  reduce using rule 4 (stmts)

    program  go to state 1
    stmts    go to state 2


State 1

    0 $accept: program . $end

    $end  shift, and go to state 3


State 2

    1 program: stmts . stmt
    3 stmts: stmts . stmt

    ID                shift, and go to state 4
    INTCONST          shift, and go to state 5
    STRING            shift, and go to state 6
    IF                shift, and go to state 7
    WHILE             shift, and go to state 8
    FOR               shift, and go to state 9
    FUNCTION          shift, and go to state 10
    RETURN            shift, and go to state 11
    BREAK             shift, and go to state 12
    CONTINUE          shift, and go to state 13
    NOT               shift, and go to state 14
    LOCAL             shift, and go to state 15
    TRUE              shift, and go to state 16
    FALSE             shift, and go to state 17
    NIL               shift, and go to state 18
    MINUS             shift, and go to state 19
    INCREMENT         shift, and go to state 20
    DECREMENT         shift, and go to state 21
    LEFT_BRACES       shift, and go to state 22
    LEFT_BRACKETS     shift, and go to state 23
    LEFT_PARENTHESIS  shift, and go to state 24
    SEMICOLON         shift, and go to state 25
    DOUBLE_COLON      shift, and go to state 26

    stmt        go to state 27
    expr        go to state 28
    term        go to state 29
    assignexpr  go to state 30
    primary     go to state 31
    lvalue      go to state 32
    member      go to state 33
    call        go to state 34
    objectdef   go to state 35
    block       go to state 36
    funcdef     go to state 37
    const       go to state 38
    ifstmt      go to state 39
    ifprefix    go to state 40
    whilestmt   go to state 41
    forstmt     go to state 42
    returnstmt  go to state 43


State 3

    0 $accept: program $end .

    $default  accept


State 4

   44 lvalue: ID .

    $default  reduce using rule 44 (lvalue)


State 5

   79 const: INTCONST .

    $default  reduce using rule 79 (const)


State 6

   80 const: STRING .

    $default  reduce using rule 80 (const)


State 7

   92 ifprefix: IF . LEFT_PARENTHESIS expr RIGHT_PARENTHESIS

    LEFT_PARENTHESIS  shift, and go to state 44


State 8

   93 whilestmt: WHILE . LEFT_PARENTHESIS expr RIGHT_PARENTHESIS stmt

    LEFT_PARENTHESIS  shift, and go to state 45


State 9

   94 forstmt: FOR . LEFT_PARENTHESIS elist SEMICOLON expr SEMICOLON elist RIGHT_PARENTHESIS stmt

    LEFT_PARENTHESIS  shift, and go to state 46


State 10

   73 funcdef: FUNCTION . ID $@2 LEFT_PARENTHESIS $@3 idlist RIGHT_PARENTHESIS funcblock
   76        | FUNCTION . $@4 LEFT_PARENTHESIS $@5 idlist RIGHT_PARENTHESIS funcblock

    ID  shift, and go to state 47

    $default  reduce using rule 74 ($@4)

    $@4  go to state 48


State 11

   95 returnstmt: RETURN . expr SEMICOLON
   96           | RETURN . SEMICOLON

    ID                shift, and go to state 4
    INTCONST          shift, and go to state 5
    STRING            shift, and go to state 6
    NOT               shift, and go to state 14
    LOCAL             shift, and go to state 15
    TRUE              shift, and go to state 16
    FALSE             shift, and go to state 17
    NIL               shift, and go to state 18
    MINUS             shift, and go to state 19
    INCREMENT         shift, and go to state 20
    DECREMENT         shift, and go to state 21
    LEFT_BRACKETS     shift, and go to state 23
    LEFT_PARENTHESIS  shift, and go to state 24
    SEMICOLON         shift, and go to state 49
    DOUBLE_COLON      shift, and go to state 26

    expr        go to state 50
    term        go to state 29
    assignexpr  go to state 30
    primary     go to state 31
    lvalue      go to state 32
    member      go to state 33
    call        go to state 34
    objectdef   go to state 35
    const       go to state 38


State 12

   10 stmt: BREAK . SEMICOLON

    SEMICOLON  shift, and go to state 51


State 13

   11 stmt: CONTINUE . SEMICOLON

    SEMICOLON  shift, and go to state 52


State 14

   32 term: NOT . expr

    ID                shift, and go to state 4
    INTCONST          shift, and go to state 5
    STRING            shift, and go to state 6
    NOT               shift, and go to state 14
    LOCAL             shift, and go to state 15
    TRUE              shift, and go to state 16
    FALSE             shift, and go to state 17
    NIL               shift, and go to state 18
    MINUS             shift, and go to state 19
    INCREMENT         shift, and go to state 20
    DECREMENT         shift, and go to state 21
    LEFT_BRACKETS     shift, and go to state 23
    LEFT_PARENTHESIS  shift, and go to state 24
    DOUBLE_COLON      shift, and go to state 26

    expr        go to state 53
    term        go to state 29
    assignexpr  go to state 30
    primary     go to state 31
    lvalue      go to state 32
    member      go to state 33
    call        go to state 34
    objectdef   go to state 35
    const       go to state 38


State 15

   45 lvalue: LOCAL . ID

    ID  shift, and go to state 54


State 16

   82 const: TRUE .

    $default  reduce using rule 82 (const)


State 17

   83 const: FALSE .

    $default  reduce using rule 83 (const)


State 18

   81 const: NIL .

    $default  reduce using rule 81 (const)


State 19

   31 term: MINUS . expr

    ID                shift, and go to state 4
    INTCONST          shift, and go to state 5
    STRING            shift, and go to state 6
    NOT               shift, and go to state 14
    LOCAL             shift, and go to state 15
    TRUE              shift, and go to state 16
    FALSE             shift, and go to state 17
    NIL               shift, and go to state 18
    MINUS             shift, and go to state 19
    INCREMENT         shift, and go to state 20
    DECREMENT         shift, and go to state 21
    LEFT_BRACKETS     shift, and go to state 23
    LEFT_PARENTHESIS  shift, and go to state 24
    DOUBLE_COLON      shift, and go to state 26

    expr        go to state 55
    term        go to state 29
    assignexpr  go to state 30
    primary     go to state 31
    lvalue      go to state 32
    member      go to state 33
    call        go to state 34
    objectdef   go to state 35
    const       go to state 38


State 20

   33 term: INCREMENT . lvalue

    ID                shift, and go to state 4
    LOCAL             shift, and go to state 15
    LEFT_PARENTHESIS  shift, and go to state 56
    DOUBLE_COLON      shift, and go to state 26

    lvalue  go to state 57
    member  go to state 33
    call    go to state 58


State 21

   35 term: DECREMENT . lvalue

    ID                shift, and go to state 4
    LOCAL             shift, and go to state 15
    LEFT_PARENTHESIS  shift, and go to state 56
    DOUBLE_COLON      shift, and go to state 26

    lvalue  go to state 59
    member  go to state 33
    call    go to state 58


State 22

   70 block: LEFT_BRACES . $@1 stmts RIGHT_BRACES

    $default  reduce using rule 69 ($@1)

    $@1  go to state 60


State 23

   63 objectdef: LEFT_BRACKETS . elist RIGHT_BRACKETS
   64          | LEFT_BRACKETS . indexed RIGHT_BRACKETS

    ID                shift, and go to state 4
    INTCONST          shift, and go to state 5
    STRING            shift, and go to state 6
    NOT               shift, and go to state 14
    LOCAL             shift, and go to state 15
    TRUE              shift, and go to state 16
    FALSE             shift, and go to state 17
    NIL               shift, and go to state 18
    MINUS             shift, and go to state 19
    INCREMENT         shift, and go to state 20
    DECREMENT         shift, and go to state 21
    LEFT_BRACES       shift, and go to state 61
    LEFT_BRACKETS     shift, and go to state 23
    LEFT_PARENTHESIS  shift, and go to state 24
    DOUBLE_COLON      shift, and go to state 26

    $default  reduce using rule 60 (elist)

    expr         go to state 62
    term         go to state 29
    assignexpr   go to state 30
    primary      go to state 31
    lvalue       go to state 32
    member       go to state 33
    call         go to state 34
    elist        go to state 63
    objectdef    go to state 35
    indexed      go to state 64
    indexedelem  go to state 65
    const        go to state 38


State 24

   30 term: LEFT_PARENTHESIS . expr RIGHT_PARENTHESIS
   42 primary: LEFT_PARENTHESIS . funcdef RIGHT_PARENTHESIS
   54 call: LEFT_PARENTHESIS . funcdef RIGHT_PARENTHESIS LEFT_PARENTHESIS elist RIGHT_PARENTHESIS

    ID                shift, and go to state 4
    INTCONST          shift, and go to state 5
    STRING            shift, and go to state 6
    FUNCTION          shift, and go to state 10
    NOT               shift, and go to state 14
    LOCAL             shift, and go to state 15
    TRUE              shift, and go to state 16
    FALSE             shift, and go to state 17
    NIL               shift, and go to state 18
    MINUS             shift, and go to state 19
    INCREMENT         shift, and go to state 20
    DECREMENT         shift, and go to state 21
    LEFT_BRACKETS     shift, and go to state 23
    LEFT_PARENTHESIS  shift, and go to state 24
    DOUBLE_COLON      shift, and go to state 26

    expr        go to state 66
    term        go to state 29
    assignexpr  go to state 30
    primary     go to state 31
    lvalue      go to state 32
    member      go to state 33
    call        go to state 34
    objectdef   go to state 35
    funcdef     go to state 67
    const       go to state 38


State 25

   14 stmt: SEMICOLON .

    $default  reduce using rule 14 (stmt)


State 26

   46 lvalue: DOUBLE_COLON . ID

    ID  shift, and go to state 68


State 27

    1 program: stmts stmt .
    3 stmts: stmts stmt .

    $end      reduce using rule 1 (program)
    $default  reduce using rule 3 (stmts)


State 28

    5 stmt: expr . SEMICOLON
   16 expr: expr . PLUS expr
   17     | expr . MINUS expr
   18     | expr . MULTIPLIES expr
   19     | expr . DIVIDES expr
   20     | expr . MODULUS expr
   21     | expr . GREATER expr
   22     | expr . GREATER_EQUAL expr
   23     | expr . LESS expr
   24     | expr . LESS_EQUAL expr
   25     | expr . EQUAL expr
   26     | expr . INEQUAL expr
   27     | expr . AND expr
   28     | expr . OR expr

    AND            shift, and go to state 69
    OR             shift, and go to state 70
    PLUS           shift, and go to state 71
    MINUS          shift, and go to state 72
    MULTIPLIES     shift, and go to state 73
    DIVIDES        shift, and go to state 74
    MODULUS        shift, and go to state 75
    EQUAL          shift, and go to state 76
    INEQUAL        shift, and go to state 77
    GREATER        shift, and go to state 78
    LESS           shift, and go to state 79
    GREATER_EQUAL  shift, and go to state 80
    LESS_EQUAL     shift, and go to state 81
    SEMICOLON      shift, and go to state 82


State 29

   29 expr: term .

    $default  reduce using rule 29 (expr)


State 30

   15 expr: assignexpr .

    $default  reduce using rule 15 (expr)


State 31

   37 term: primary .

    $default  reduce using rule 37 (term)


State 32

   34 term: lvalue . INCREMENT
   36     | lvalue . DECREMENT
   38 assignexpr: lvalue . ASSIGN expr
   39 primary: lvalue .
   48 member: lvalue . DOT ID
   49       | lvalue . LEFT_BRACKETS expr RIGHT_BRACKETS
   53 call: lvalue . callsuffix

    ASSIGN            shift, and go to state 83
    INCREMENT         shift, and go to state 84
    DECREMENT         shift, and go to state 85
    LEFT_BRACKETS     shift, and go to state 86
    LEFT_PARENTHESIS  shift, and go to state 87
    DOT               shift, and go to state 88
    DOUBLE_DOT        shift, and go to state 89

    $default  reduce using rule 39 (primary)

    callsuffix  go to state 90
    normcall    go to state 91
    methodcall  go to state 92


State 33

   47 lvalue: member .

    $default  reduce using rule 47 (lvalue)


State 34

   40 primary: call .
   50 member: call . DOT ID
   51       | call . LEFT_BRACKETS expr RIGHT_BRACKETS
   52 call: call . LEFT_PARENTHESIS elist RIGHT_PARENTHESIS

    LEFT_BRACKETS     shift, and go to state 93
    LEFT_PARENTHESIS  shift, and go to state 94
    DOT               shift, and go to state 95

    $default  reduce using rule 40 (primary)


State 35

   41 primary: objectdef .

    $default  reduce using rule 41 (primary)


State 36

   12 stmt: block .

    $default  reduce using rule 12 (stmt)


State 37

   13 stmt: funcdef .

    $default  reduce using rule 13 (stmt)


State 38

   43 primary: const .

    $default  reduce using rule 43 (primary)


State 39

    6 stmt: ifstmt .

    $default  reduce using rule 6 (stmt)


State 40

   90 ifstmt: ifprefix . stmt
   91       | ifprefix . stmt ELSE stmt

    ID                shift, and go to state 4
    INTCONST          shift, and go to state 5
    STRING            shift, and go to state 6
    IF                shift, and go to state 7
    WHILE             shift, and go to state 8
    FOR               shift, and go to state 9
    FUNCTION          shift, and go to state 10
    RETURN            shift, and go to state 11
    BREAK             shift, and go to state 12
    CONTINUE          shift, and go to state 13
    NOT               shift, and go to state 14
    LOCAL             shift, and go to state 15
    TRUE              shift, and go to state 16
    FALSE             shift, and go to state 17
    NIL               shift, and go to state 18
    MINUS             shift, and go to state 19
    INCREMENT         shift, and go to state 20
    DECREMENT         shift, and go to state 21
    LEFT_BRACES       shift, and go to state 22
    LEFT_BRACKETS     shift, and go to state 23
    LEFT_PARENTHESIS  shift, and go to state 24
    SEMICOLON         shift, and go to state 25
    DOUBLE_COLON      shift, and go to state 26

    stmt        go to state 96
    expr        go to state 28
    term        go to state 29
    assignexpr  go to state 30
    primary     go to state 31
    lvalue      go to state 32
    member      go to state 33
    call        go to state 34
    objectdef   go to state 35
    block       go to state 36
    funcdef     go to state 37
    const       go to state 38
    ifstmt      go to state 39
    ifprefix    go to state 40
    whilestmt   go to state 41
    forstmt     go to state 42
    returnstmt  go to state 43


State 41

    7 stmt: whilestmt .

    $default  reduce using rule 7 (stmt)


State 42

    8 stmt: forstmt .

    $default  reduce using rule 8 (stmt)


State 43

    9 stmt: returnstmt .

    $default  reduce using rule 9 (stmt)


State 44

   92 ifprefix: IF LEFT_PARENTHESIS . expr RIGHT_PARENTHESIS

    ID                shift, and go to state 4
    INTCONST          shift, and go to state 5
    STRING            shift, and go to state 6
    NOT               shift, and go to state 14
    LOCAL             shift, and go to state 15
    TRUE              shift, and go to state 16
    FALSE             shift, and go to state 17
    NIL               shift, and go to state 18
    MINUS             shift, and go to state 19
    INCREMENT         shift, and go to state 20
    DECREMENT         shift, and go to state 21
    LEFT_BRACKETS     shift, and go to state 23
    LEFT_PARENTHESIS  shift, and go to state 24
    DOUBLE_COLON      shift, and go to state 26

    expr        go to state 97
    term        go to state 29
    assignexpr  go to state 30
    primary     go to state 31
    lvalue      go to state 32
    member      go to state 33
    call        go to state 34
    objectdef   go to state 35
    const       go to state 38


State 45

   93 whilestmt: WHILE LEFT_PARENTHESIS . expr RIGHT_PARENTHESIS stmt

    ID                shift, and go to state 4
    INTCONST          shift, and go to state 5
    STRING            shift, and go to state 6
    NOT               shift, and go to state 14
    LOCAL             shift, and go to state 15
    TRUE              shift, and go to state 16
    FALSE             shift, and go to state 17
    NIL               shift, and go to state 18
    MINUS             shift, and go to state 19
    INCREMENT         shift, and go to state 20
    DECREMENT         shift, and go to state 21
    LEFT_BRACKETS     shift, and go to state 23
    LEFT_PARENTHESIS  shift, and go to state 24
    DOUBLE_COLON      shift, and go to state 26

    expr        go to state 98
    term        go to state 29
    assignexpr  go to state 30
    primary     go to state 31
    lvalue      go to state 32
    member      go to state 33
    call        go to state 34
    objectdef   go to state 35
    const       go to state 38


State 46

   94 forstmt: FOR LEFT_PARENTHESIS . elist SEMICOLON expr SEMICOLON elist RIGHT_PARENTHESIS stmt

    ID                shift, and go to state 4
    INTCONST          shift, and go to state 5
    STRING            shift, and go to state 6
    NOT               shift, and go to state 14
    LOCAL             shift, and go to state 15
    TRUE              shift, and go to state 16
    FALSE             shift, and go to state 17
    NIL               shift, and go to state 18
    MINUS             shift, and go to state 19
    INCREMENT         shift, and go to state 20
    DECREMENT         shift, and go to state 21
    LEFT_BRACKETS     shift, and go to state 23
    LEFT_PARENTHESIS  shift, and go to state 24
    DOUBLE_COLON      shift, and go to state 26

    $default  reduce using rule 60 (elist)

    expr        go to state 62
    term        go to state 29
    assignexpr  go to state 30
    primary     go to state 31
    lvalue      go to state 32
    member      go to state 33
    call        go to state 34
    elist       go to state 99
    objectdef   go to state 35
    const       go to state 38


State 47

   73 funcdef: FUNCTION ID . $@2 LEFT_PARENTHESIS $@3 idlist RIGHT_PARENTHESIS funcblock

    $default  reduce using rule 71 ($@2)

    $@2  go to state 100


State 48

   76 funcdef: FUNCTION $@4 . LEFT_PARENTHESIS $@5 idlist RIGHT_PARENTHESIS funcblock

    LEFT_PARENTHESIS  shift, and go to state 101


State 49

   96 returnstmt: RETURN SEMICOLON .

    $default  reduce using rule 96 (returnstmt)


State 50

   16 expr: expr . PLUS expr
   17     | expr . MINUS expr
   18     | expr . MULTIPLIES expr
   19     | expr . DIVIDES expr
   20     | expr . MODULUS expr
   21     | expr . GREATER expr
   22     | expr . GREATER_EQUAL expr
   23     | expr . LESS expr
   24     | expr . LESS_EQUAL expr
   25     | expr . EQUAL expr
   26     | expr . INEQUAL expr
   27     | expr . AND expr
   28     | expr . OR expr
   95 returnstmt: RETURN expr . SEMICOLON

    AND            shift, and go to state 69
    OR             shift, and go to state 70
    PLUS           shift, and go to state 71
    MINUS          shift, and go to state 72
    MULTIPLIES     shift, and go to state 73
    DIVIDES        shift, and go to state 74
    MODULUS        shift, and go to state 75
    EQUAL          shift, and go to state 76
    INEQUAL        shift, and go to state 77
    GREATER        shift, and go to state 78
    LESS           shift, and go to state 79
    GREATER_EQUAL  shift, and go to state 80
    LESS_EQUAL     shift, and go to state 81
    SEMICOLON      shift, and go to state 102


State 51

   10 stmt: BREAK SEMICOLON .

    $default  reduce using rule 10 (stmt)


State 52

   11 stmt: CONTINUE SEMICOLON .

    $default  reduce using rule 11 (stmt)


State 53

   16 expr: expr . PLUS expr
   17     | expr . MINUS expr
   18     | expr . MULTIPLIES expr
   19     | expr . DIVIDES expr
   20     | expr . MODULUS expr
   21     | expr . GREATER expr
   22     | expr . GREATER_EQUAL expr
   23     | expr . LESS expr
   24     | expr . LESS_EQUAL expr
   25     | expr . EQUAL expr
   26     | expr . INEQUAL expr
   27     | expr . AND expr
   28     | expr . OR expr
   32 term: NOT expr .

    AND            shift, and go to state 69
    OR             shift, and go to state 70
    PLUS           shift, and go to state 71
    MINUS          shift, and go to state 72
    MULTIPLIES     shift, and go to state 73
    DIVIDES        shift, and go to state 74
    MODULUS        shift, and go to state 75
    EQUAL          shift, and go to state 76
    INEQUAL        shift, and go to state 77
    GREATER        shift, and go to state 78
    LESS           shift, and go to state 79
    GREATER_EQUAL  shift, and go to state 80
    LESS_EQUAL     shift, and go to state 81

    $default  reduce using rule 32 (term)


State 54

   45 lvalue: LOCAL ID .

    $default  reduce using rule 45 (lvalue)


State 55

   16 expr: expr . PLUS expr
   17     | expr . MINUS expr
   18     | expr . MULTIPLIES expr
   19     | expr . DIVIDES expr
   20     | expr . MODULUS expr
   21     | expr . GREATER expr
   22     | expr . GREATER_EQUAL expr
   23     | expr . LESS expr
   24     | expr . LESS_EQUAL expr
   25     | expr . EQUAL expr
   26     | expr . INEQUAL expr
   27     | expr . AND expr
   28     | expr . OR expr
   31 term: MINUS expr .

    AND            shift, and go to state 69
    OR             shift, and go to state 70
    EQUAL          shift, and go to state 76
    INEQUAL        shift, and go to state 77
    GREATER        shift, and go to state 78
    LESS           shift, and go to state 79
    GREATER_EQUAL  shift, and go to state 80
    LESS_EQUAL     shift, and go to state 81

    $default  reduce using rule 31 (term)


State 56

   54 call: LEFT_PARENTHESIS . funcdef RIGHT_PARENTHESIS LEFT_PARENTHESIS elist RIGHT_PARENTHESIS

    FUNCTION  shift, and go to state 10

    funcdef  go to state 103


State 57

   33 term: INCREMENT lvalue .
   48 member: lvalue . DOT ID
   49       | lvalue . LEFT_BRACKETS expr RIGHT_BRACKETS
   53 call: lvalue . callsuffix

    LEFT_BRACKETS     shift, and go to state 86
    LEFT_PARENTHESIS  shift, and go to state 87
    DOT               shift, and go to state 88
    DOUBLE_DOT        shift, and go to state 89

    $default  reduce using rule 33 (term)

    callsuffix  go to state 90
    normcall    go to state 91
    methodcall  go to state 92


State 58

   50 member: call . DOT ID
   51       | call . LEFT_BRACKETS expr RIGHT_BRACKETS
   52 call: call . LEFT_PARENTHESIS elist RIGHT_PARENTHESIS

    LEFT_BRACKETS     shift, and go to state 93
    LEFT_PARENTHESIS  shift, and go to state 94
    DOT               shift, and go to state 95


State 59

   35 term: DECREMENT lvalue .
   48 member: lvalue . DOT ID
   49       | lvalue . LEFT_BRACKETS expr RIGHT_BRACKETS
   53 call: lvalue . callsuffix

    LEFT_BRACKETS     shift, and go to state 86
    LEFT_PARENTHESIS  shift, and go to state 87
    DOT               shift, and go to state 88
    DOUBLE_DOT        shift, and go to state 89

    $default  reduce using rule 35 (term)

    callsuffix  go to state 90
    normcall    go to state 91
    methodcall  go to state 92


State 60

   70 block: LEFT_BRACES $@1 . stmts RIGHT_BRACES

    $default  reduce using rule 4 (stmts)

    stmts  go to state 104


State 61

   68 indexedelem: LEFT_BRACES . expr COLON expr RIGHT_BRACES

    ID                shift, and go to state 4
    INTCONST          shift, and go to state 5
    STRING            shift, and go to state 6
    NOT               shift, and go to state 14
    LOCAL             shift, and go to state 15
    TRUE              shift, and go to state 16
    FALSE             shift, and go to state 17
    NIL               shift, and go to state 18
    MINUS             shift, and go to state 19
    INCREMENT         shift, and go to state 20
    DECREMENT         shift, and go to state 21
    LEFT_BRACKETS     shift, and go to state 23
    LEFT_PARENTHESIS  shift, and go to state 24
    DOUBLE_COLON      shift, and go to state 26

    expr        go to state 105
    term        go to state 29
    assignexpr  go to state 30
    primary     go to state 31
    lvalue      go to state 32
    member      go to state 33
    call        go to state 34
    objectdef   go to state 35
    const       go to state 38


State 62

   16 expr: expr . PLUS expr
   17     | expr . MINUS expr
   18     | expr . MULTIPLIES expr
   19     | expr . DIVIDES expr
   20     | expr . MODULUS expr
   21     | expr . GREATER expr
   22     | expr . GREATER_EQUAL expr
   23     | expr . LESS expr
   24     | expr . LESS_EQUAL expr
   25     | expr . EQUAL expr
   26     | expr . INEQUAL expr
   27     | expr . AND expr
   28     | expr . OR expr
   59 elist: expr . elists

    AND            shift, and go to state 69
    OR             shift, and go to state 70
    PLUS           shift, and go to state 71
    MINUS          shift, and go to state 72
    MULTIPLIES     shift, and go to state 73
    DIVIDES        shift, and go to state 74
    MODULUS        shift, and go to state 75
    EQUAL          shift, and go to state 76
    INEQUAL        shift, and go to state 77
    GREATER        shift, and go to state 78
    LESS           shift, and go to state 79
    GREATER_EQUAL  shift, and go to state 80
    LESS_EQUAL     shift, and go to state 81
    COMMA          shift, and go to state 106

    $default  reduce using rule 62 (elists)

    elists  go to state 107


State 63

   63 objectdef: LEFT_BRACKETS elist . RIGHT_BRACKETS

    RIGHT_BRACKETS  shift, and go to state 108


State 64

   64 objectdef: LEFT_BRACKETS indexed . RIGHT_BRACKETS

    RIGHT_BRACKETS  shift, and go to state 109


State 65

   65 indexed: indexedelem . indexeds

    COMMA  shift, and go to state 110

    $default  reduce using rule 67 (indexeds)

    indexeds  go to state 111


State 66

   16 expr: expr . PLUS expr
   17     | expr . MINUS expr
   18     | expr . MULTIPLIES expr
   19     | expr . DIVIDES expr
   20     | expr . MODULUS expr
   21     | expr . GREATER expr
   22     | expr . GREATER_EQUAL expr
   23     | expr . LESS expr
   24     | expr . LESS_EQUAL expr
   25     | expr . EQUAL expr
   26     | expr . INEQUAL expr
   27     | expr . AND expr
   28     | expr . OR expr
   30 term: LEFT_PARENTHESIS expr . RIGHT_PARENTHESIS

    AND                shift, and go to state 69
    OR                 shift, and go to state 70
    PLUS               shift, and go to state 71
    MINUS              shift, and go to state 72
    MULTIPLIES         shift, and go to state 73
    DIVIDES            shift, and go to state 74
    MODULUS            shift, and go to state 75
    EQUAL              shift, and go to state 76
    INEQUAL            shift, and go to state 77
    GREATER            shift, and go to state 78
    LESS               shift, and go to state 79
    GREATER_EQUAL      shift, and go to state 80
    LESS_EQUAL         shift, and go to state 81
    RIGHT_PARENTHESIS  shift, and go to state 112


State 67
